--- a/okteto.yml
+++ b/okteto.yml
@@ -2,7 +2,7 @@ name: graph-db-feeder
 autocreate: true
 image: okteto/golang:1
 command: bash
-namespace: jagw-dev-michel
+namespace: jagw-dev-dominique
 securityContext:
   capabilities:
     add:
