--- a/.github/workflows/build-push.yaml
+++ b/.github/workflows/build-push.yaml
@@ -8,6 +8,11 @@ jobs:
   docker:
     runs-on: ubuntu-latest
     steps:
+      - name: Get release
+        id: get_release
+        uses: bruceadams/get-release@v1.2.3
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: Login to DockerHub
         uses: docker/login-action@v1
         with:
@@ -25,6 +30,6 @@ jobs:
           push: true
           tags: |
             insost/jagw-cache-service:latest
-            insost/jagw-cache-service:1.0.0
+            insost/jagw-cache-service:${{ steps.get_release.outputs.upload_url }}
             ghcr.io/jalapeno-api-gateway/jagw-cache-service:latest
-            ghcr.io/jalapeno-api-gateway/jagw-cache-service:1.0.0
+            ghcr.io/jalapeno-api-gateway/jagw-cache-service:${{ steps.get_release.outputs.upload_url }}
