--- a/.github/workflows/build_and_push_dev.yaml
+++ b/.github/workflows/build_and_push_dev.yaml
@@ -23,6 +23,6 @@ jobs:
       - name: Build and push
         uses: docker/build-push-action@v2
         with:
-          path: "./Dockerfile.dev"
+          file: ./Dockerfile.dev
           push: true
           tags: insost/jagw-cache-service:dev-${{ steps.get_branch.outputs.branch }}
