--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -1,4 +1,4 @@
-FROM golang:1.16-alpine
+FROM golang:1.16-alpine AS build_base
 
 RUN apk add --no-cache git
 WORKDIR /tmp/cache-service
@@ -10,8 +10,9 @@ RUN go mod download
 COPY . .
 RUN CGO_ENABLED=0 go build -o ./out/cache-service .
 
+FROM golang:1.16-alpine
 LABEL maintainer="Michel Bongard"
 
-COPY /tmp/cache-service/out/cache-service /usr/bin/cache-service
+COPY --from=build_base /tmp/cache-service/out/cache-service /usr/bin/cache-service
 
 ENTRYPOINT [ "/usr/bin/cache-service" ]
