--- a/.github/workflows/merge-to-main.yml
+++ b/.github/workflows/merge-to-main.yml
@@ -9,8 +9,6 @@ on:
       destination_branch:
         type: string
         required: true
-      delete_source_branch:
-        type: boolean
   
 jobs:
   merge-to-main:
@@ -22,9 +20,9 @@ jobs:
         id: create-pull-request
         uses: repo-sync/pull-request@v2
         with:
-          source_branch: ${{ inputs.source_branch }}
-          destination_branch: ${{ inputs.destination_branch }}
-          pr_title: "Auto-Generated PR: ${{ inputs.source_branch }} -> ${{ inputs.destination_branch }}"
+          source_branch: dev
+          destination_branch: main
+          pr_title: "Auto-Generated PR: dev -> main"
           pr_label: "automerge"
           pr_allow_empty: true
           github_token: ${{ github.token }}
@@ -33,9 +31,3 @@ jobs:
         env:
           GITHUB_TOKEN: "${{ github.token }}"
           PULL_REQUEST: "${{ steps.create-pull-request.outputs.pr_number }}"
-      - name: Delete source branch
-        if: ${{ inputs.delete_source_branch }}
-        uses: dawidd6/action-delete-branch@v3
-        with:
-          github_token: ${{ github.token }}
-          branches: ${{ inputs.source_branch }}
