--- a/.github/workflows/update-dependencies.yml
+++ b/.github/workflows/update-dependencies.yml
@@ -9,7 +9,7 @@ on:
       tag_name:
         type: string
         required: true
-      jagw_core_commit_sha:
+      jagw_core_ref:
         type: string
         required: true
 
@@ -17,14 +17,6 @@ jobs:
   update-dependencies:
     runs-on: ubuntu-latest
     steps:
-      - name: Set Go ref
-        id: go-ref
-        run: |
-          if [[ ${{ inputs.release_type }} == 'release' ]]; then
-            echo "::set-output name=jagw_core_ref::${{ inputs.tag_name }}"
-          else
-            echo "::set-output name=jagw_core_ref::${{ inputs.jagw_core_commit_sha }}"
-          fi
       - name: Checkout
         uses: actions/checkout@v3
         with:
@@ -34,7 +26,7 @@ jobs:
           go-version: '1.17.2'
       - name: Update dependencies
         run: |
-          go get github.com/jalapeno-api-gateway/jagw-core@${{ steps.go-ref.outputs.jagw_core_ref }}
+          go get github.com/jalapeno-api-gateway/jagw-core@${{ inputs.jagw_core_ref }}
           go mod tidy
       - name: Create PR for local changes
         id: cpr
