--- a/.github/workflows/update-dependencies.yml
+++ b/.github/workflows/update-dependencies.yml
@@ -44,10 +44,13 @@ jobs:
         id: branch-exists
         run: |
           exists_locally=$(git branch --list gh-action-temp)
+          echo "dooo ${exists_locally}"
           if [[ -z ${exists_locally} ]]; then
-              echo "::set-output name=exists::0"
-          else
               echo "::set-output name=exists::1"
+              echo "daaaa 1"
+          else
+              echo "::set-output name=exists::0"
+              echo "daaaa 0"
           fi
       - name: Delete temp branch if it exists
         if: steps.branch-exists.outputs.exists == 1
@@ -55,3 +58,4 @@ jobs:
         with:
           github_token: ${{ github.token }}
           branches: gh-action-temp
+          soft_fail: true
