--- a/kubernetes/cache-service-secret.yaml
+++ b/kubernetes/cache-service-secret.yaml
@@ -7,3 +7,4 @@ data:
     ARANGO_DB_USER: cm9vdA==
     ARANGO_DB_PASSWORD: amFsYXBlbm8=
     REDIS_PASSWORD: YS12ZXJ5LWNvbXBsZXgtcGFzc3dvcmQtaGVyZQ==
+    SENTINEL_PASSWORD: YS12ZXJ5LWNvbXBsZXgtcGFzc3dvcmQtaGVyZQ==
